section_13_oop/challenge/compiling_error.txt
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_section_13_challenge\main.cpp: In function 'void add_movie_to_collection()':
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_section_13_challenge\main.cpp:23:4: error: 'user_collection' was not declared in this scope
   *user_collection.add_movie(title_value, mpaa_rating_value, user_rating_value, watched_value);
    ^~~~~~~~~~~~~~~
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_section_13_challenge\main.cpp: In function 'void user_menu()':
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_section_13_challenge\main.cpp:39:6: error: 'user_collection' was not declared in this scope
     *user_collection.get_all_movies();
      ^~~~~~~~~~~~~~~
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_section_13_challenge\main.cpp:45:6: error: 'user_collection' was not declared in this scope
     *user_collection.search(search_query);
      ^~~~~~~~~~~~~~~
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_section_13_challenge\main.cpp:49:13: error: 'user_collection' was not declared in this scope
     delete *user_collection;
             ^~~~~~~~~~~~~~~
